# cohort10

./: .gitignore  Dockerfile  docker-compose.yml  tmp_queue_test.py
mvp-assessment/: README.md
mvp-assessment/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
mvp-assessment/backend/app/: bootstrap.py  config.py  create_tables.py  db.py  logging_config.py  main.py  messaging.py  metrics.py  seed_questions.py
mvp-assessment/backend/app/__pycache__/: config.cpython-312.pyc.2063909060800  config.cpython-312.pyc.2861550424336  metrics.cpython-312.pyc.2129953021328
mvp-assessment/backend/app/api/routes/: ai.py  candidates.py  dashboard.py  results.py  sessions.py
mvp-assessment/backend/app/crew/: __init__.py  crew.py  flow.py  tasks.py
mvp-assessment/backend/app/crew/__pycache__/: agents.cpython-312.pyc.1759325772880  agents.cpython-312.pyc.2217757364336  agents.cpython-312.pyc.2262910221456  agents.cpython-312.pyc.2515525472048  crew.cpython-312.pyc.1491449189344  crew.cpython-312.pyc.2192110669952  crew.cpython-312.pyc.2232840983520  crew.cpython-312.pyc.2262910213584  crew.cpython-312.pyc.2324073048384  crew.cpython-312.pyc.2514756082912  (+7 more)
mvp-assessment/backend/app/migrations/: env.py
mvp-assessment/backend/app/models/: __init__.py  dimension_score.py  evaluator_run.py  final_report.py  question.py  session_question.py  submission.py
mvp-assessment/backend/app/schemas/: candidate.py  result.py
mvp-assessment/backend/app/tools/: __init__.py  code_runner_tools.py  question_tools.py  score_tools.py  submission_tools.py
(+255 files in other folders)
